--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,13 +3,13 @@
   <div class="navbar-header">
     <button class="navbar-toggle" data-target=".navbar-collapse"
                 data-toggle="collapse" type="button"></button> 
-    <a class="navbar-brand" href="./index.html">Research collaboration tool</a>
+    <%= link_to "Research collaboration tool", root_path, class: "navbar-brand" %>
   </div>
 
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="register.html">Register</a></li>
-      <li><a href="login.html">Login</a></li>
+      <li><%= link_to "Register", registration_path %></li>
+      <li><%= link_to "Login", '#' %></li>
     </ul>
   </div><!-- /.nav-collapse -->
 </div>
