--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,24 @@
 @import "bootstrap";
+
+#error_explanation {
+		   color: #f00;
+		   ul {
+		      list-style: none;
+		      margin: 0 0 18px 0;
+		   }
+}
+
+.fields_with_errors {
+		    @extend .control-group;
+		    @extend .error;
+}
+
+input, textarea, select .uneditable-input {
+       border: 1px solid #bbb;
+       width: 100%;
+       margin-bottom:15px;
+}
+
+input {
+      height: auto !important;
+}
