--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,36 @@
-<h1>New user</h1>
+<h1>Sign up</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@user) do |f| %>
 
-<%= link_to 'Back', users_path %>
+    <%= render 'shared/error_messages' %>
+
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+    
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+    <hr>
+    <%= f.label :country %>
+    <%= f.text_field :country %>
+
+    <%= f.label :state %>
+    <%= f.text_field :state %>
+    
+    <%= f.label :county %>
+    <%= f.text_field :county %>
+
+    <%= f.submit "Create my profile", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
+</div>
