--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,36 +1,50 @@
-<h1>Sign up</h1>
+<div>
+  <h1>Sign up</h1>
+  
+  <div class="register">
+      <%= form_for(@user) do |f| %>
+      
+      <%= render '/shared/error_messages' %>
+      
+      <div class="form-group">
+	<%= f.label :first_name %>
+	<%= f.text_field :first_name, class: 'form-control', autofocus: true %>
+      </div>
 
-<div class="row">
-  <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
+      <div class="form-group">
+	<%= f.label :last_name %>
+	<%= f.text_field :last_name, class: 'form-control' %>
+      </div>
 
-    <%= render '/shared/error_messages' %>
+      <div class="form-group">
+	<%= f.label :email %>
+	<%= f.text_field :email, class: 'form-control' %>
+      </div>
 
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+      <div class="form-group">
+	<%= f.label :password %>
+	<%= f.password_field :password, class: 'form-control' %>
+      </div>
 
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-    
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+      <div class="form-group">
+	<%= f.label :password_confirmation %>
+	<%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
+      
+      <div class="form-group">
+	<%= f.label :country %>
+	<%= f.country_select :country %>
+      </div>
 
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-    
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-    <hr>
-    <%= f.label :country %>
-    <%= f.text_field :country %>
+      <div class="form-group">
+	<%= f.label :state %>
+	<%= render partial: 'subregion_select', locals: {parent_region: f.object.country} %>
+      </div>
 
-    <%= f.label :state %>
-    <%= f.text_field :state %>
-    
-    <%= f.label :county %>
-    <%= f.text_field :county %>
-
-    <%= f.submit "Create my profile", class: "btn btn-large btn-primary" %>
-    <% end %>
-  </div>
+      <%= f.label :county %>
+      <%= f.text_field :county %>
+      
+      <%= f.submit "Create my profile", class: "btn btn-large btn-primary" %>
+      <% end %>
+    </div>
 </div>
