Sign in/sign out functioning.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,3 +22,8 @@ input, textarea, select .uneditable-input {
 input {
       height: auto !important;
 }
+
+.register {
+	  max-width: 650px;
+	  margin: 0 auto;
+}
