--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,3 @@
-<!-- if logged in -->
 <div class="navbar navbar-default">
   <div class="navbar-header">
     <button class="navbar-toggle" data-target=".navbar-collapse"
@@ -7,9 +6,31 @@
   </div>
 
   <div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Register", registration_path %></li>
-      <li><%= link_to "Login", '#' %></li>
-    </ul>
+      <% if signed_in? %>
+      <ul class="nav navbar-nav">
+        <li class="alert-danger"><%= link_to "Inbox", '#' %></li>
+        <li><%= link_to "Search", '#' %></li>
+        <li><%= link_to "My Profile", current_user %></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href=
+             "#">Collaborations <span class="caret"></span></a>	
+          <ul class="dropdown-menu">
+	    
+            <li><%= link_to "Create new", '#' %></li>
+            <li><%= link_to "Current collaborations", '#' %></li>
+          </ul>
+	</li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+	<li><a class="navbar-default">Hello, <%= current_user.first_name %></a></li>
+	<li><%= link_to "Logout", signout_path, method: "delete" %></li>
+      </ul>     
+	<% else %>
+    
+	<ul class="nav navbar-nav navbar-right">
+	  <li><%= link_to "Register", registration_path %></li>
+	  <li><%= link_to "Login", signin_path %></li>
+	</ul>
+	<% end %>
   </div><!-- /.nav-collapse -->
 </div>
