--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,5 +32,11 @@
   <%= @user.county %>
 </p>
 
+<p>
+  <%= image_tag @user.avatar.url(:medium) %>
+</p>
+
+<% if signed_in? && current_user?(@user) %>
 <%= link_to 'Edit', edit_user_path(@user) %> |
+<% end %>
 <%= link_to 'Back', users_path %>
