Added email notification options

--- a/app/views/users/_edit_sidebar.html.erb
+++ b/app/views/users/_edit_sidebar.html.erb
@@ -1,8 +1,8 @@
 <div class="col-md-2">
   <ul class="nav nav-list nav-fixed-sidebar">
     <li class="nav-header">My Profile</li>
-    <li class="active"><%= link_to "About me", user_path %></li>
-    <li><%= link_to "My Settings", '#' %></li>
+    <li class="active"><%= link_to "About me", edit_user_path %></li>
+    <li><%= link_to "My Settings", settings_user_path %></li>
     <li><%= link_to "Email notifications", '#' %></li>
   </ul>
 </div>
