--- a/app/views/users/_edit_sidebar.html.erb
+++ b/app/views/users/_edit_sidebar.html.erb
@@ -3,6 +3,6 @@
     <li class="nav-header">My Profile</li>
     <li class="active"><%= link_to "About me", edit_user_path %></li>
     <li><%= link_to "My Settings", settings_user_path %></li>
-    <li><%= link_to "Email notifications", '#' %></li>
+    <li><%= link_to "Email notifications", notifications_user_path %></li>
   </ul>
 </div>
