--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,37 +1,14 @@
+<% provide(:title, 'All users') %>
 <h1>Listing users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Country</th>
-      <th>State</th>
-      <th>County</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<%= will_paginate %>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.country %></td>
-        <td><%= user.state %></td>
-        <td><%= user.county %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+<ul class="users">
+  <% @users.each do |user| %>
+  <li>
+    <%= image_tag @user.avatar.url(:medium) %>
+    <%= link_to user.name, user %>
+  </li>
+  <% end %>
+</ul>
+<%= will_paginate %>
