--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,8 +6,8 @@
 <ul class="users">
   <% @users.each do |user| %>
   <li>
-    <%= image_tag @user.avatar.url(:medium) %>
-    <%= link_to user.name, user %>
+    <%= image_tag user.avatar.url(:thumb) %>
+    <%= link_to user.first_name, user %>
   </li>
   <% end %>
 </ul>
