--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,10 @@
   <%= image_tag @user.avatar.url(:medium) %>
 </p>
 
-<% if signed_in? && current_user?(@user) %>
+<% if current_user?(@user) || current_user.admin? %>
 <%= link_to 'Edit', edit_user_path(@user) %> |
+<% end %>
+<% if current_user.admin? && !current_user(@user) %>
+<%= link_to "delete", user, method: :delete, data: { confirm: "Are you sure?" } %> | 
 <% end %>
 <%= link_to 'Back', users_path %>
