working on collab page

--- a/app/views/collaborations/edit.html.erb
+++ b/app/views/collaborations/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing collaboration</h1>
-
+<% provide(:title, "Edit your collaboration") %>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <h3>Edit your collaboration</h3>
+  </div>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Show', @collaboration %> |
-<%= link_to 'Back', collaborations_path %>
+ 
