--- a/app/views/collaborations/_form.html.erb
+++ b/app/views/collaborations/_form.html.erb
@@ -1,37 +1,22 @@
+<div class="col-md-10">
 <%= form_for(@collaboration) do |f| %>
-  <% if @collaboration.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@collaboration.errors.count, "error") %> prohibited this collaboration from being saved:</h2>
-
-      <ul>
-      <% @collaboration.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+<% if @collaboration.errors.any? %>
+<ul>
+  <% @collaboration.errors.full_messages.each do |error| %>
+  <li><%= error %></li>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :desc %><br>
-    <%= f.text_field :desc %>
-  </div>
-  <div class="field">
-    <%= f.label :country %><br>
-    <%= f.text_field :country %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :county %><br>
-    <%= f.text_field :county %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</ul>
 <% end %>
+  
+  <div class="form-group">
+    <%= f.label :name, "Project name", class: "col-sm-2 control-label"  %>
+    <div class="col-sm-9">
+      <%= f.text_field :name, class: "form-control"  %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Submit", class: "btn btn-large btn-primary" %>
+  </div>
+  <% end %>
+</div>
