--- a/app/views/collaborations/_form.html.erb
+++ b/app/views/collaborations/_form.html.erb
@@ -1,13 +1,6 @@
 <div class="col-md-10">
 <%= form_for @collaboration, html: { class: "form-horizontal" } do |f| %>
-<% if @collaboration.errors.any? %>
-<ul>
-  <% @collaboration.errors.full_messages.each do |error| %>
-  <li><%= error %></li>
-  <% end %>
-</ul>
-<% end %>
-  
+<%= render 'shared/error_messages', object: f.object %>  
   <div class="form-group">
     <%= f.label :name, "Project name", class: "col-sm-2 control-label"  %>
     <div class="col-sm-9">
