--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 
       <%= form_for(@user) do |f| %>
       
-      <%= render '/shared/error_messages' %>
+      <%= render '/shared/error_messages', object: f.object %>
       
       <div class="form-group">
 	<%= f.label :first_name %>
