--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       <ul class="nav navbar-nav">
         <li class="alert-danger"><%= link_to "Inbox", '#' %></li>
         <li><%= link_to "Search", '#' %></li>
-        <li><%= link_to "My Profile", current_user %></li>
+        <li><%= link_to "My Profile", edit_user_path(current_user) %></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href=
              "#">Collaborations <span class="caret"></span></a>	
@@ -22,7 +22,11 @@
 	</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-	<li><a class="navbar-default">Hello, <%= current_user.first_name %></a></li>
+	<li>
+	  <%= link_to current_user, { class: "navbar-default" } do %>
+	  Hello, <%= current_user.first_name %>
+	  <% end %>
+	</li>
 	<li><%= link_to "Logout", signout_path, method: "delete" %></li>
       </ul>     
 	<% else %>
