--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Research Collaboration Tool</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% if signed_in? %>
+<%= render 'shared/feed' %>
+<% else %>
+
+<% end %>
