Prettied up the collaboration view, added a picture for collaborations, working on the 'other collaborators' as of now.

--- a/app/views/collaborations/show.html.erb
+++ b/app/views/collaborations/show.html.erb
@@ -37,7 +37,7 @@
 	<% end %>
       </ul>
     </p>
-    <h4>Other collaborators involved:</h4>
+    <h4>Other collaborators involved (<%= @collaboration.users.count %>):</h4>
     <div class="row">
       <div class="col-sm-4">
 
