--- a/app/views/users/_study.html.erb
+++ b/app/views/users/_study.html.erb
@@ -1,10 +1,22 @@
-	<%= f.label :s_animal, "Animals", class: "checkbox-inline" %>
-	<%= f.check_box :s_animal %>
-	<%= f.label :s_children, "Children", class: "checkbox-inline" %>
-	<%= f.check_box :s_children %>
-	<%= f.label :s_adults, "Adults", class: "checkbox-inline" %>
-	<%= f.check_box :s_adults %>
-	<%= f.label :s_environment, "Environment", class: "checkbox-inline" %>
-	<%= f.check_box :s_environment %>
-	<%= f.label :s_cells, "Cells/Tissues", class: "checkbox-inline" %>
-	<%= f.check_box :s_cells %>
+	<%= f.label :s_animal, "Animals", class: "checkbox-inline" do %>
+	<%= f.check_box :s_animal %> Animals
+	<% end %>
+	
+	<%= f.label :s_children, "Children", class: "checkbox-inline" do %>
+	<%= f.check_box :s_children %> Children
+	<% end %>
+
+	<%= f.label :s_adults, "Adults", class: "checkbox-inline" do %>	
+	<%= f.check_box :s_adults %> Adults
+	<% end %>
+
+	
+	<%= f.label :s_environment, "Environment", class: "checkbox-inline" do %>
+	<%= f.check_box :s_environment %> Environment
+	<% end %>
+	
+
+	<%= f.label :s_cells, "Cells/Tissues", class: "checkbox-inline" do %>	
+	<%= f.check_box :s_cells %> Cells/Tissues
+	<% end %>
+
