--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,4 +26,11 @@ input {
 .register {
 	  max-width: 650px;
 	  margin: 0 auto;
+	  padding: 15px;
+}
+
+.form-signin {
+	     max-width: 330px;
+	     padding: 15px;
+	     margin: 0 auto;
 }
