--- a/app/views/shared/_item.html.erb
+++ b/app/views/shared/_item.html.erb
@@ -2,21 +2,23 @@
   <h3><%= item.name %></h3>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      Image here
+      <%= image_tag item.picture.url(:index) %>
     </div>
   </div>
   <div class="col-sm-6 col-md-8">
-    <p><%= item.desc %></p>
-    <div class="progress=bar" role="progressbar" aria-valuenow="80" aria-valuemax="100" style="width:80%"> 80% matching rate</div>
+    <p><%= truncate item.desc, length: 750 %></p>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemax="100" style="width:80%"> 80% matching rate</div>
+    </div>
 
   </div>
-  <span class="badge badge-success">Posted <% time_ago_in_words(item.created_at) %> ago.</span>
+  <span class="badge badge-success">Posted <%= time_ago_in_words(item.created_at) %> ago.</span>
   <div class="pull-right">
     <span class="label label-info"><%= item.county %></span>
     <span class="label label-info">Tags</span>
   </div>
-</div>
-<div class="pull-right">
-  <h3><%= link_to 'More information', item %></h3>
+  <div class="pull-right">
+    <h3><%= link_to 'More information', item %></h3>
+  </div>
 </div>
 <hr>
