--- a/app/views/users/_travel.html.erb
+++ b/app/views/users/_travel.html.erb
@@ -1,3 +1,3 @@
 	<%= f.label :travel_distance, "How far are you willing to travel for a project?" %>
-	<%= f.select :travel_distance, ['&lt; 10 miles', '20 miles', '40 miles', '60 miles', 'Depends on the project'], { prompt: 'Please select' }, { class: 'form-control' } %>
+	<%= f.select :travel_distance, ['Less than 10 miles', '20 miles', '40 miles', '60 miles', 'Depends on the project'], { prompt: 'Please select' }, { class: 'form-control' } %>
   
