--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -74,17 +74,17 @@
       
       <div class="form-group">
 	<%= f.label :country %>
-	<%= f.country_select :country %>
+	<%= f.country_select :country, class: 'form-control' %>
       </div>
 
       <div class="form-group">
 	<%= f.label :state %>
-	<%= f.text_field :state %>
+	<%= f.text_field :state, class: 'form-control' %>
       </div>
       
       <div class="form-group">
 	<%= f.label :county %>
-	<%= f.text_field :county %>
+	<%= f.text_field :county, class: 'form-control' %>
       </div>
 
       <div class="form-group">
