7 years later and inbox is almost done.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
   <div class="navbar-collapse collapse">
       <% if signed_in? %>
       <ul class="nav navbar-nav">
-        <li class="alert-danger"><%= link_to "Inbox", '#' %></li>
+        <li class="alert-danger"><%= link_to "Inbox", conversations_path %></li>
         <li><%= link_to "Search", '#' %></li>
         <li><%= link_to "My Profile", edit_user_path(current_user) %></li>
         <li class="dropdown">
