--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-3">
-    <%= image_tag @user.avatar.url(:profile) %>
+    <%= image_tag @user.avatar.url(:thumb) %>
   </div>
   <div class="col-md-9">
     <h2><%= @user.first_name %> <%= @user.last_name %></h2>
