--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -64,6 +64,11 @@
       </div>
 
       <div class="form-group">
+	<%= f.label :desc, "Please enter a short description of yourself." %>
+	<%= f.text_area :desc, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
 	<%= render partial: 'experience', locals: {f: f} %>
       </div>
       
